[gd_scene load_steps=13 format=3 uid="uid://dhrxqr1eei2au"]

[ext_resource type="Script" path="res://src/door_ui.gd" id="1_0mety"]
[ext_resource type="StyleBox" uid="uid://dnmicfmqn34qf" path="res://ui/panel3.tres" id="2_2o0uv"]
[ext_resource type="Theme" uid="uid://dewhnganfla67" path="res://ui/rustic_theme.tres" id="3_1h48d"]
[ext_resource type="StyleBox" uid="uid://dr1jhqgo7vrtr" path="res://ui/panel1.tres" id="4_2yjh5"]
[ext_resource type="Texture2D" uid="uid://73y38rkqg37k" path="res://ui/textures/UI_Lower.png" id="5_6hiqr"]
[ext_resource type="Texture2D" uid="uid://bbb6cj3wn7chm" path="res://assets/essenceBlue.png" id="5_htnms"]
[ext_resource type="Texture2D" uid="uid://dgv2exfc8ucwh" path="res://ui/textures/Close.png" id="5_l10qj"]
[ext_resource type="Texture2D" uid="uid://dsa0p5hg8tgp" path="res://ui/textures/doorLock.png" id="5_yexsl"]
[ext_resource type="Texture2D" uid="uid://kvjbcf0fed7" path="res://ui/textures/button1.png" id="6_efoil"]
[ext_resource type="Texture2D" uid="uid://w1u62ib488q8" path="res://assets/essenceRed.png" id="7_jqt0q"]
[ext_resource type="Texture2D" uid="uid://n6hrdcsbkxel" path="res://assets/essenceOrange.png" id="9_58c5i"]
[ext_resource type="Texture2D" uid="uid://dyeht2qjx48ln" path="res://assets/essenceWhite.png" id="10_3xb88"]

[node name="door_ui" type="CanvasLayer" groups=["door_UI"]]
script = ExtResource("1_0mety")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3555.0
offset_top = -2102.0
offset_right = 3535.0
offset_bottom = 2114.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.0196078, 0.00784314, 0, 0.611765)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -822.0
offset_top = -466.0
offset_right = 822.0
offset_bottom = 414.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_styles/panel = ExtResource("2_2o0uv")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="DoorPanel" type="PanelContainer" parent="MarginContainer/PanelContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_1h48d")
theme_override_styles/panel = ExtResource("4_2yjh5")

[node name="VBoxContainer1" type="VBoxContainer" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_type_variation = &"HeaderLabel"
theme_override_font_sizes/font_size = 45
text = "Mystical Gardens: Entrance"
horizontal_alignment = 2

[node name="Spacer2" type="Control" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 9.0
alignment = 1

[node name="SpacerMargin" type="Control" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="VBoxContainerLeft" type="VBoxContainer" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainerBlue" type="HBoxContainer" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerLeft"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="essenceBlue" type="TextureRect" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerLeft/HBoxContainerBlue"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("5_htnms")
stretch_mode = 5

[node name="textBox1" type="TextureRect" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerLeft/HBoxContainerBlue"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("6_efoil")
stretch_mode = 5

[node name="countBlue" type="Label" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerLeft/HBoxContainerBlue/textBox1" groups=["essenceBlue"]]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -8.5
offset_right = 16.0
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 45
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerLeft"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Insert Essence"

[node name="Spacer3" type="Control" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerLeft"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="HBoxContainerRed" type="HBoxContainer" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerLeft"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="essenceRed" type="TextureRect" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerLeft/HBoxContainerRed"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("7_jqt0q")
stretch_mode = 5

[node name="textBox1" type="TextureRect" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerLeft/HBoxContainerRed"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("6_efoil")
stretch_mode = 5

[node name="countRed" type="Label" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerLeft/HBoxContainerRed/textBox1" groups=["essenceRed"]]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -8.5
offset_right = 16.0
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 45
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerLeft"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Insert Essence"

[node name="Spacer4" type="Control" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerLeft"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15

[node name="SpacerMargin2" type="Control" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.07

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("5_6hiqr")
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 56
patch_margin_bottom = 56

[node name="SpacerMargin3" type="Control" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="VBoxContainerRight" type="VBoxContainer" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainerOrange" type="HBoxContainer" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerRight"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="essenceOrange" type="TextureRect" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerRight/HBoxContainerOrange"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("9_58c5i")
stretch_mode = 5

[node name="textBox1" type="TextureRect" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerRight/HBoxContainerOrange"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("6_efoil")
stretch_mode = 5

[node name="countOrange" type="Label" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerRight/HBoxContainerOrange/textBox1" groups=["essenceOrange"]]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -8.5
offset_right = 16.0
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 45
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerRight"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Insert Essence"

[node name="Spacer3" type="Control" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerRight"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="HBoxContainerOrange2" type="HBoxContainer" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerRight"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="essenceWhite" type="TextureRect" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerRight/HBoxContainerOrange2"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("10_3xb88")
stretch_mode = 5

[node name="textBox1" type="TextureRect" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerRight/HBoxContainerOrange2"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("6_efoil")
stretch_mode = 5

[node name="countWhite" type="Label" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerRight/HBoxContainerOrange2/textBox1" groups=["essenceWhite"]]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -8.5
offset_right = 16.0
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 45
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerRight"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Insert Essence"

[node name="Spacer5" type="Control" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer/VBoxContainerRight"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15

[node name="SpacerMagrgin4" type="Control" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="Spacer1" type="Control" parent="MarginContainer/PanelContainer/HBoxContainer/DoorPanel/VBoxContainer1"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="closeButton" type="TextureButton" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 798.0
offset_top = -486.0
offset_right = 862.0
offset_bottom = -422.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
size_flags_horizontal = 8
size_flags_vertical = 0
size_flags_stretch_ratio = 3.0
tooltip_text = "Close"
texture_normal = ExtResource("5_l10qj")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.0
offset_top = -254.0
offset_right = 289.0
offset_bottom = 330.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
texture = ExtResource("5_yexsl")
expand_mode = 1
stretch_mode = 5

[connection signal="pressed" from="closeButton" to="." method="_on_close_button_pressed"]
